[gd_scene load_steps=4 format=3 uid="uid://cqjmfq35vnxr7"]

[ext_resource type="PackedScene" path="res://entities/Player/PlayerSprite.tscn" id="1"]
[ext_resource type="Script" path="res://scripts/Player/Player.gd" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(11, 21)

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 4
collision_mask = 37
floor_max_angle = 0.872665
floor_snap_length = 4.0
script = ExtResource("2")

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.5)
shape = SubResource("1")

[node name="HitMask" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="HurtBox" type="CollisionShape2D" parent="HitMask"]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0, 0, 1)
position = Vector2(0, -2.5)
shape = SubResource("1")

[node name="WallJumpMask" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="Mask" type="CollisionShape2D" parent="WallJumpMask"]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0, 0, 1)
position = Vector2(0, -2.5)
shape = SubResource("1")

[node name="WaterMask" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="Mask" type="CollisionShape2D" parent="WaterMask"]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0, 0, 1)
position = Vector2(0, -2.5)
shape = SubResource("1")

[node name="Player" parent="." instance=ExtResource("1")]

[node name="BulletContainer" type="Node" parent="."]

[connection signal="area_shape_entered" from="HitMask" to="." method="_on_HitMask_area_shape_entered"]
[connection signal="body_entered" from="HitMask" to="." method="_on_HitMask_body_entered"]
[connection signal="area_shape_entered" from="WallJumpMask" to="." method="_on_WallJumpMask_area_shape_entered"]
[connection signal="area_shape_exited" from="WallJumpMask" to="." method="_on_WallJumpMask_area_shape_exited"]
[connection signal="area_shape_entered" from="WaterMask" to="." method="_on_WaterMask_area_shape_entered"]
[connection signal="area_shape_exited" from="WaterMask" to="." method="_on_WaterMask_area_shape_exited"]
